--- a/src/about.njk
+++ b/src/about.njk
@@ -4,27 +4,59 @@ title: About Me
 ---
 
 <div class="flex flex-col items-center text-lg">
-    {% if author.avatar %}
-    <a href="{{ author.homepage | url }}" target="_blank" rel="noopener">
-        <img class="w-32 h-32 md:w-40 md:h-40 rounded-full" src="{{ author.avatar | url }}" width="128" height="128" alt="Author avatar">
-    </a>
-    {% endif %}
-    <div class="text-center mt-8">
-        <h1 class="text-2xl font-medium text-gray-800 leading-relaxed mt-0 mb-1">
-            <a href="{{ author.homepage | url }}" target="_blank" rel="noopener">{{ author.name }}</a>
-        </h1>
-        {% if author.email %}
-        <div class="text-gray-600">
-            <a href="mailto:{{ author.email }}">{{ author.email }}</a>
-        </div>
-        {% endif %}
-        {% if author.phone %}
-        <div class="text-gray-600">
-            <a href="tel:{{ author.phone }}">{{ author.phone }}</a>
-        </div>
-        {% endif %}
-        {% if author.bio %}
-        <p class="mt-3 text-gray-700">{{ author.bio }}</p>
-        {% endif %}
+  {% if author.avatar %}
+  <a href="{{ author.homepage | url }}" target="_blank" rel="noopener">
+    <img
+      class="w-32 h-32 md:w-40 md:h-40 rounded-full"
+      src="{{ '/assets/img/avatar.jpg' | url }}"
+      width="128"
+      height="128"
+      alt="Author avatar"
+    />
+  </a>
+  {% endif %}
+  <div class="text-center mt-8">
+    <h1 class="text-2xl font-medium text-gray-800 leading-relaxed mt-0 mb-1">
+      <a href="{{ author.homepage | url }}" target="_blank" rel="noopener">{{
+        author.name
+      }}</a>
+    </h1>
+    {% if author.email %}
+    <div class="text-gray-600">
+      <a href="mailto:{{ author.email }}">{{ author.email }}</a>
     </div>
+    {% endif %} {% if author.phone %}
+    <div class="text-gray-600">
+      <a href="tel:{{ author.phone }}">{{ author.phone }}</a>
+    </div>
+    {% endif %} {% if author.socials %}
+    <div class="bg-black_ text-center">
+      <a
+        href="{{ author.socials.linkedin }}"
+        target="_blank"
+        class="block underline"
+      >
+        Linkedin
+      </a>
+
+      <a
+        href="{{ author.socials.twitter }}"
+        target="_blank"
+        class="block underline"
+      >
+        Twitter
+      </a>
+
+      <a
+        href="{{ author.socials.github }}"
+        target="_blank"
+        class="block underline"
+      >
+        Github
+      </a>
+    </div>
+    {% endif %} {% if author.bio %}
+    <p class="mt-3 text-gray-700">{{ author.bio }}</p>
+    {% endif %}
+  </div>
 </div>
