--- a/src/misc/index.json.njk
+++ b/src/misc/index.json.njk
@@ -1,12 +1,8 @@
 ---
 permalink: "/index.json"
 ---
-[
-    {% for post in collections.posts %}
-    {
-        "url": "{{ post.url | url }}",
-        "title": "{{ post.data.title }}",
-        "date": "{{ post.data.page.date | readableDate }}"
-    }{% if not loop.last %},{% endif %}
-    {% endfor %}
-]
+
+[ {% for post in collections.posts %} { "url": "{{ post.url | url }}", "urlp":
+"{{ post.data.urlp | url }}", "title": "{{ post.data.title }}", "date": "{{
+  post.data.page.date | readableDate
+}}" }{% if not loop.last %},{% endif %} {% endfor %} ]
