--- a/src/index.njk
+++ b/src/index.njk
@@ -16,25 +16,23 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
   </p>
   <p class="mt-3 text-2xl py-2">
     {{ author.resume }}
+    <a
+      href="./skills"
+      class="text-2xl font-extrabold underline"
+      style="text-underline-offset: 5px"
+    >
+      conocimientos 🧠
+    </a>
   </p>
 </div>
 {% endif %}
 
-<!-- <div>
+<div class="mt-12 mb-3">
   <h3
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    🛠️ Skills
-  </h3>
-</div> -->
-
-<div class="mt-20 mb-3">
-  <h3
-    class="font-extrabold text-xl underline"
-    style="text-underline-offset: 5px"
-  >
-    🎉 Proyectos Destacados
+    🎉 Proyectos Destacados:
   </h3>
 </div>
 
