--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,59 +1,77 @@
-{%- set metaTitle -%}
-    {%- if not title -%}{{ site.title }} - {{ site.description | safe }}
-    {%- else -%}{{ title | safe }} | {{ site.title }}
-    {%- endif -%}
-{%- endset -%}
-{%- set metaDesc -%}
-    {%- if not description -%}{{ site.description | safe }}
-    {%- else -%}{{ description | safe }}
-    {%- endif -%}
-{%- endset -%}
-{%- set metaKeywords -%}
-    {%- if tags -%}{%- for tag in tags -%}{{ tag }},{%- endfor -%}{%- endif -%}
-    {%- if site.keywords -%}
-        {%- for keyword in site.keywords -%}
-            {{ keyword }}{%- if not loop.last %},{% endif -%}
-        {%- endfor -%}
-    {%- endif -%}
-{%- endset -%}
+{%- set metaTitle -%} {%- if not title -%}{{ site.title }} -
+{{ site.description | safe }} {%- else -%}{{ title | safe }} |
+{{ site.title }} {%- endif -%} {%- endset -%} {%- set metaDesc -%} {%- if not
+description -%}{{ site.description | safe }} {%- else -%}{{
+  description | safe
+}}
+{%- endif -%} {%- endset -%} {%- set metaKeywords -%} {%- if tags -%}{%- for tag
+in tags -%}{{ tag }},{%- endfor -%}{%- endif -%} {%- if site.keywords -%} {%-
+for keyword in site.keywords -%} {{ keyword }}{%- if not loop.last %},{% endif
+-%} {%- endfor -%} {%- endif -%} {%- endset -%}
 <!DOCTYPE html>
 <html lang="es">
-    
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ metaTitle }}</title>
-    <meta name="title" content="{{ metaTitle }}">
-    <meta name="description" content="{{ metaDesc }}">
-    <meta name="keywords" content="{{ metaKeywords }}">
-    <meta name="author" content="{{ author.name }}">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
-    <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.png' | url }}">
-    <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
-</head>	
+    <meta name="title" content="{{ metaTitle }}" />
+    <meta name="description" content="{{ metaDesc }}" />
+    <meta name="keywords" content="{{ metaKeywords }}" />
+    <meta name="author" content="{{ author.name }}" />
+    <meta name="robots" content="index, follow" />
 
-<body class="flex flex-col h-screen bg-white text-gray-800 break-words">
+    <!-- Metas -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://j4iro.com" />
+    <meta property="og:title" content="👨‍💻 Jairo Lachira" />
+    <meta property="og:description" content="{{ metaDesc }}" />
+    <meta property="og:image" content="{{ '/assets/img/favicon.png' | url }}" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://j4iro.com" />
+    <meta property="twitter:title" content="👨‍💻 Jairo Lachira" />
+    <meta property="twitter:description" content="{{ metaDesc }}" />
+    <meta
+      property="twitter:image"
+      content="{{ '/assets/img/favicon.png' | url }}"
+    />
+    <!-- Metas -->
+
+    <link rel="canonical" href="{{ site.url | url }}{{ page.url }}" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="{{ '/assets/img/favicon.png' | url }}"
+    />
+    <!-- <link
+      rel="-touch-icon"
+      href="{{ '/assets/img/apple-touch-icon.png' | url }}"
+    /> -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+    />
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}" />
+  </head>
+
+  <body class="flex flex-col h-screen bg-white text-gray-800 break-words">
     {% include "partials/header.njk" %}
     <main class="mx-7 lg:mx-6 mt-32 flex-grow">
-        {% if layout === "post" %}
+      {% if layout === "post" %}
+      {{ content | safe }}
+      {% else %}
+      <div class="max-w-5xl mx-auto">
         {{ content | safe }}
-        {% else %}
-        <div class="max-w-5xl mx-auto">
-            {{ content | safe }}
-        </div>
-        {% endif %}
+      </div>
+      {% endif %}
     </main>
     {% include "partials/footer.njk" %}
     <script src="{{ '/assets/js/bundle.js' | url }}"></script>
-</body>
-
+  </body>
 </html>
