simple ajuste en margin, index

--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 ---
 
 {% if author.resume %}
-<div class="my-10 bg-gray-200_">
+<div class="md:mt-7 mb-10 bg-gray-200_">
   <p
     class="text-4xl bg-gray-800 text-white p-2 max-w-3xl bg-gradient-to-r from-purple-400 via-pink-500 to-red-500"
   >
