--- a/src/index.njk
+++ b/src/index.njk
@@ -41,6 +41,25 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 </div>
 <!-- Skills -->
 
+{# Posts #}
+<div class="mt-12 mb-3">
+  <h3
+    class="font-extrabold text-xl underline"
+    style="text-underline-offset: 5px"
+  >
+    📑 Publicaciones:
+  </h3>
+</div>
+
+
+<div class="flex flex-wrap -mx-2">{% include "partials/post-grid.njk" %}</div>
+
+{% if collections.posts.length > site.paginate %} {% include
+"partials/paginator.njk" %} {% endif %}
+{# End Posts #}
+
+
+{# Grid proyects #}
 <div class="mt-12 mb-3">
   <h3
     class="font-extrabold text-xl underline"
@@ -50,7 +69,47 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
   </h3>
 </div>
 
-<div class="flex flex-wrap -mx-2">{% include "partials/post-grid.njk" %}</div>
 
-{% if collections.posts.length > site.paginate %} {% include
-"partials/paginator.njk" %} {% endif %}
+<div class="flex flex-wrap -mx-2">
+  {% for project in author.projects %}
+    <div class="w-full sm:w-1/2 md:w-1/3 self-stretch p-2 mb-2">
+    <div class="rounded shadow-md h-full">
+      <a href="{{project.main_link}}" target="_blank">
+      <img
+        src="/assets/img/{{project.thumb}}"
+        width="960"
+        height="500"
+        alt="This post thumbnail"
+      />
+      </a>
+      <div class="px-6 py-5">
+        <div class="font-semibold text-lg mb-2">
+          <a
+            class="text-gray-900 hover:text-gray-700"
+            href="{{project.main_link}}"
+            target="_blank"
+            >{{ project.title }}</a
+          >
+        </div>
+        <p class="text-gray-700 mb-1" title="Published date">
+          {{ project.date }}
+        </p>
+        <p class="text-gray-800">
+          {{ project.description }}
+        </p>
+        <div class="mt-2">
+          {% if project.github %}
+            <a href="{{project.github}}" class="underline text-blue-800	mr-2" target="_blank">Github</a>
+          {% endif %}
+          {% if project.postman %}
+            <a href="{{project.postman}}" class="underline text-blue-800 mr-2" target="_blank">Postman</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    </div>
+  {% endfor %}
+</div>
+{# End Grid proyects #}
+
+
