--- a/src/tag.njk
+++ b/src/tag.njk
@@ -5,13 +5,13 @@ pagination:
   data: collections.pagedPostsByTag
   size: 1
   alias: paged
-permalink: "skills/{{ paged.tagName }}/{% if paged.number > 1 %}{{ paged.number }}/{% endif %}index.html"
+permalink: "tags/{{ paged.tagName }}/{% if paged.number > 1 %}{{ paged.number }}/{% endif %}index.html"
 eleventyComputed:
   title: 'Tagged with "{{ paged.tagName | capitalize }}"'
 ---
 
 <div class="mb-8 text-center">
-  <h3 class="text-xl font-medium text-gray-700 my-0">Proyectos que tienen:</h3>
+  <h3 class="text-xl font-medium text-gray-700 my-0">Posts relacionados a:</h3>
   <h1 class="text-4xl font-medium leading-normal mt-0">
     {{ paged.tagName | capitalize }}
   </h1>
