new post and change language to english

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -9,7 +9,7 @@ in tags -%}{{ tag }},{%- endfor -%}{%- endif -%} {%- if site.keywords -%} {%-
 for keyword in site.keywords -%} {{ keyword }}{%- if not loop.last %},{% endif
 -%} {%- endfor -%} {%- endif -%} {%- endset -%}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
