--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -35,13 +35,13 @@
       class="order-last sm:order-none flex-grow items-center justify-end hidden sm:block mt-6 sm:mt-0"
     >
       <label class="visually-hidden" for="header-searchbox"
-        >Buscar aqui ....</label
+        >Search here ....</label
       >
       <input
         type="text"
         id="header-searchbox"
         name="q"
-        placeholder="Buscar aqui ...."
+        placeholder="Search here ...."
         class="w-full sm:max-w-xs bg-gray-200 border border-transparent float-right focus:bg-white focus:border-gray-300 focus:outline-none h-8 p-4 placeholder-gray-500 rounded text-gray-700 text-sm"
       />
     </form>
