--- a/src/_includes/partials/post-grid.njk
+++ b/src/_includes/partials/post-grid.njk
@@ -17,6 +17,11 @@
                 {{ post.templateContent | striptags | truncate(90, true) }}
                 {% endif %}
             </p>
+             <span
+                class="inline-block mt-3 px-3 py-1 bg-gray-200 text-gray-700 text-sm rounded-full shadow-md hover:shadow-lg"
+            >
+                {{ post.data.lang }}
+            </span>
         </div>
     </div>
 </div>
