--- a/src/index.njk
+++ b/src/index.njk
@@ -10,9 +10,10 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 {% if author.resume %}
 <div class="md:mt-7 mb-10 bg-gray-200_">
   <p
-    class="text-4xl bg-gray-800 text-white p-2 max-w-3xl bg-gradient-to-r from-purple-400 via-pink-500 to-red-500"
+    class="text-4xl bg-gray-800 text-white p-2 max-w-4xl bg-gradient-to-r from-purple-400 via-pink-500 to-red-500"
   >
-    Sitio personal y portafolio de <a href="./">Jairo Lachira</a>
+    {# Sitio personal y portafolio de <a href="./">Jairo Lachira</a> #}
+    Jairo Lachira's personal website, portfolio and blog 
   </p>
   <p class="mt-3 text-2xl py-2">
     {{ author.resume }}
@@ -26,7 +27,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    🧠 Habilidades:
+    🧠 Skills:
   </h3>
 </div>
 
@@ -47,7 +48,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    📑 Publicaciones:
+    📑 Posts:
   </h3>
 </div>
 
@@ -65,7 +66,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    🎉 Proyectos Destacados:
+    🎉 Featured Projects:
   </h3>
 </div>
 
