--- a/src/tag.njk
+++ b/src/tag.njk
@@ -11,7 +11,7 @@ eleventyComputed:
 ---
 
 <div class="mb-8 text-center">
-  <h3 class="text-xl font-medium text-gray-700 my-0">Posts relacionados a:</h3>
+  <h3 class="text-xl font-medium text-gray-700 my-0">Posts related to:</h3>
   <h1 class="text-4xl font-medium leading-normal mt-0">
     {{ paged.tagName | capitalize }}
   </h1>
