added a platzi exchange project

--- a/src/index.njk
+++ b/src/index.njk
@@ -102,9 +102,13 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
           {% if project.postman %}
             <a href="{{project.postman}}" class="underline text-blue-800 mr-2" target="_blank">Postman Docs</a>
           {% endif %}
+          {% if project.website %}
+            <a href="{{project.website}}" class="underline text-blue-800	mr-2" target="_blank">Visite website</a>
+          {% endif %}
           {% if project.github %}
             <a href="{{project.github}}" class="underline text-blue-800	mr-2" target="_blank">Github</a>
           {% endif %}
+         
         </div>
       </div>
     </div>
