visit instead visite

--- a/src/index.njk
+++ b/src/index.njk
@@ -103,7 +103,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
             <a href="{{project.postman}}" class="underline text-blue-800 mr-2" target="_blank">Postman Docs</a>
           {% endif %}
           {% if project.website %}
-            <a href="{{project.website}}" class="underline text-blue-800	mr-2" target="_blank">Visite website</a>
+            <a href="{{project.website}}" class="underline text-blue-800	mr-2" target="_blank">Visit website</a>
           {% endif %}
           {% if project.github %}
             <a href="{{project.github}}" class="underline text-blue-800	mr-2" target="_blank">Github</a>
