--- a/src/index.njk
+++ b/src/index.njk
@@ -27,7 +27,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    🧠 Skills:
+    🧠 Skill set:
   </h3>
 </div>
 
