--- a/src/index.njk
+++ b/src/index.njk
@@ -98,18 +98,39 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
         <p class="text-gray-800">
           {{ project.description }}
         </p>
-        <div class="mt-2">
+
+        <div class="mt-2 mb-3">
+
           {% if project.postman %}
             <a href="{{project.postman}}" class="underline text-blue-800 mr-2" target="_blank">Postman Docs</a>
           {% endif %}
+
           {% if project.website %}
             <a href="{{project.website}}" class="underline text-blue-800	mr-2" target="_blank">Visit website</a>
           {% endif %}
+
+          {% if project.telegram_chat %}
+            <a href="{{project.telegram_chat}}" class="underline text-blue-800	mr-2" target="_blank">Telegram chat</a>
+          {% endif %}
+
           {% if project.github %}
             <a href="{{project.github}}" class="underline text-blue-800	mr-2" target="_blank">Github</a>
           {% endif %}
          
         </div>
+
+        {% if project.team %}
+        <hr>
+        <div class="mt-3">
+        
+          <b>Team: </b>
+          {% for person in project.team %}
+              <a href="{{person.url}}" class="underline text-blue-800	mr-1" target="_blank">{{person.nick}}</a>
+          {% endfor %}
+        </div>
+        {% endif %}
+
+
       </div>
     </div>
     </div>
