--- a/src/index.njk
+++ b/src/index.njk
@@ -42,6 +42,48 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 </div>
 <!-- Skills -->
 
+<!-- Learning -->
+<div class="mt-12 mb-4">
+  <h3
+    class="font-extrabold text-xl underline"
+    style="text-underline-offset: 5px"
+  >
+    👨‍💻 I'm learning:
+  </h3>
+</div>
+
+<div class="flex justify-start flex-wrap">
+  {% for skill in author.learning %}
+  <span
+    class="inline-block mx-1 mb-3 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-full shadow-md hover:shadow-lg"
+  >
+    {{ skill }}
+  </span>
+  {% endfor %}
+</div>
+<!-- Learning -->
+
+<!-- Would like Learn -->
+<div class="mt-12 mb-4">
+  <h3
+    class="font-extrabold text-xl underline"
+    style="text-underline-offset: 5px"
+  >
+    📝 I'd like learn:
+  </h3>
+</div>
+
+<div class="flex justify-start flex-wrap">
+  {% for skill in author.will_learn %}
+  <span
+    class="inline-block mx-1 mb-3 px-4 py-2 bg-gray-200 text-gray-700 font-medium rounded-full shadow-md hover:shadow-lg"
+  >
+    {{ skill }}
+  </span>
+  {% endfor %}
+</div>
+<!-- Would like Learn -->
+
 {# Posts #}
 <div class="mt-12 mb-3">
   <h3
