--- a/src/index.njk
+++ b/src/index.njk
@@ -69,7 +69,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
     class="font-extrabold text-xl underline"
     style="text-underline-offset: 5px"
   >
-    📝 I'd like learn:
+    📝 I'd like to learn:
   </h3>
 </div>
 
