[INSERT] webchat test

--- a/src/index.njk
+++ b/src/index.njk
@@ -181,3 +181,10 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 {# End Grid proyects #}
 
 
+<script
+      data-id="widget-securitec"
+      data-token="082befe6-242e-4d97-8e3f-2deb5588f567"
+      src="https://webchat.scorecrm.pe/widget-loader.js"
+    ></script>
+
+
