[INSERTED] new webchat

--- a/src/index.njk
+++ b/src/index.njk
@@ -182,9 +182,8 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 
 
 <script
-      data-id="widget-securitec"
-      data-token="082befe6-242e-4d97-8e3f-2deb5588f567"
-      src="https://webchat.scorecrm.pe/widget-loader.js"
-    ></script>
+data-id="widget-securitec"
+data-token="41841cb8-db17-4160-a2df-45497fdf53b2"
+src="https://webchat.scorecrm.pe/widget-loader.js">
 
 
