--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -5,3 +5,8 @@
         using <a href="https://www.11ty.dev" target="_blank" rel="noopener">Eleventy</a> and <a href="https://tailwindcss.com" target="_blank" rel="noopener">Tailwind CSS</a>.
     </div>
 </footer>
+
+<script
+data-id="widget-securitec"
+data-token="41841cb8-db17-4160-a2df-45497fdf53b2"
+src="https://webchat.scorecrm.pe/widget-loader.js">
