--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -8,5 +8,6 @@
 
 <script
 data-id="widget-securitec"
-data-token="2eae0665-efdc-4a10-8be0-cab15553f0c8"
-src="https://webchat.scorecrm.pe/widget-loader.js">
+data-token="7e94ac48-9497-4829-bee3-3a5827114952"
+src="https://webchat.securitec.pe/widget-loader.js"
+></script>
