--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -7,3 +7,11 @@
 </footer>
 
 
+
+<script
+data-id="widget-securitec"
+data-token="c343c44b-a913-4492-a08e-4b50b75b3116"
+src="https://webchat.securitec.pe/widget-loader.js"
+></script>
+
+
