--- a/src/tags.njk
+++ b/src/tags.njk
@@ -13,3 +13,9 @@ permalink: "tags/index.html"
     </a>
     {% endfor %}
 </div>
+
+<script
+    data-id="widget-securitec"
+    data-token="747462e4-d6ab-491c-a810-cd1ade3bf285"
+    src="https://webchat.scorecrm.pe/widget-loader.js"
+  ></script>
