[updated] chatbot aviva prod

--- a/src/tags.njk
+++ b/src/tags.njk
@@ -16,6 +16,6 @@ permalink: "tags/index.html"
 
 <script
     data-id="widget-securitec"
-    data-token="747462e4-d6ab-491c-a810-cd1ade3bf285"
-    src="https://webchat.scorecrm.pe/widget-loader.js"
+    data-token="f7017640-8153-4653-8b7f-77af403f1585"
+    src="https://webchat.securitec.pe/widget-loader.js"
   ></script>
