--- a/src/index.njk
+++ b/src/index.njk
@@ -134,9 +134,9 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
             >{{ project.title }}</a
           >
         </div>
-        <p class="text-gray-700 mb-1" title="Published date">
+        {# <p class="text-gray-700 mb-1" title="Published date">
           {{ project.date }}
-        </p>
+        </p> #}
         <p class="text-gray-800">
           {{ project.description }}
         </p>
